# libuuid

./: .gitignore  CMakeLists.txt  README.md
cmake/: precheck.cmake
src/: predefined.c  uuidP.h
test/: CMakeLists.txt  test_uuid.c
